@@ -1,3 +1,4 @@
+m4_include([m4/acx_ccache.m4])
 m4_include([m4/acx_pthread.m4])
 m4_include([m4/ax_lang_compiler_ms.m4])
 m4_include([m4/ax_check_gl.m4])
